Switch Windows caches to restore/save steps

--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -19,15 +19,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Cache Zig
-      uses: actions/cache@v4
+    - name: Restore Zig cache
+      id: cache-zig
+      uses: actions/cache/restore@v4
       with:
         path: C:\zig
         key: windows-zig-0.10.1
-        save-always: true
 
-    - name: Cache vcpkg
-      uses: actions/cache@v4
+    - name: Restore vcpkg cache
+      id: cache-vcpkg
+      uses: actions/cache/restore@v4
       with:
         path: |
           C:\vcpkg\installed
@@ -36,22 +37,21 @@ jobs:
         key: windows-vcpkg-x86_64-${{ hashFiles('build_config.rb', 'mrbgem.rake') }}
         restore-keys: |
           windows-vcpkg-x86_64-
-        save-always: true
 
-    - name: Cache Ruby
-      uses: actions/cache@v4
+    - name: Restore Ruby cache
+      id: cache-ruby
+      uses: actions/cache/restore@v4
       with:
         path: |
           C:\hostedtoolcache\windows\Ruby\3.1.*\x64
           C:\hostedtoolcache\windows\Ruby\3.1.*\x86
         key: windows-ruby-3.1
-        save-always: true
-    - name: Cache Oniguruma
-      uses: actions/cache@v4
+    - name: Restore Oniguruma cache
+      id: cache-oniguruma
+      uses: actions/cache/restore@v4
       with:
         path: C:\oniguruma\windows-x86_64
         key: windows-oniguruma-6.9.9-windows-x86_64
-        save-always: true
 
     - name: Setup Ruby
       uses: ruby/setup-ruby@v1
@@ -267,3 +267,36 @@ jobs:
     - name: Run Windows path compatibility test
       run: |
         .\mitamae-build\mitamae-x86_64-windows.exe local -l info spec/recipes/windows_path_test.rb
+
+    - name: Save Zig cache
+      if: always() && steps.cache-zig.outputs.cache-hit != 'true'
+      uses: actions/cache/save@v4
+      with:
+        path: C:\zig
+        key: ${{ steps.cache-zig.outputs.cache-primary-key }}
+
+    - name: Save vcpkg cache
+      if: always() && steps.cache-vcpkg.outputs.cache-hit != 'true'
+      uses: actions/cache/save@v4
+      with:
+        path: |
+          C:\vcpkg\installed
+          C:\vcpkg\packages
+          C:\vcpkg\downloads
+        key: ${{ steps.cache-vcpkg.outputs.cache-primary-key }}
+
+    - name: Save Ruby cache
+      if: always() && steps.cache-ruby.outputs.cache-hit != 'true'
+      uses: actions/cache/save@v4
+      with:
+        path: |
+          C:\hostedtoolcache\windows\Ruby\3.1.*\x64
+          C:\hostedtoolcache\windows\Ruby\3.1.*\x86
+        key: ${{ steps.cache-ruby.outputs.cache-primary-key }}
+
+    - name: Save Oniguruma cache
+      if: always() && steps.cache-oniguruma.outputs.cache-hit != 'true'
+      uses: actions/cache/save@v4
+      with:
+        path: C:\oniguruma\windows-x86_64
+        key: ${{ steps.cache-oniguruma.outputs.cache-primary-key }}
