--- a/.github/workflows/windows-package-test.yml
+++ b/.github/workflows/windows-package-test.yml
@@ -37,14 +37,6 @@ jobs:
         restore-keys: |
           windows-vcpkg-x86_64-
 
-    - name: Restore Ruby cache
-      id: cache-ruby
-      uses: actions/cache/restore@v4
-      with:
-        path: |
-          C:\hostedtoolcache\windows\Ruby\3.1.*\x64
-          C:\hostedtoolcache\windows\Ruby\3.1.*\x86
-        key: windows-ruby-3.1
     - name: Restore Oniguruma cache
       id: cache-oniguruma
       uses: actions/cache/restore@v4
@@ -59,6 +51,7 @@ jobs:
         bundler-cache: true
 
     - name: Setup Zig
+      id: setup-zig
       run: |
         $ZigVersion = "0.10.1"
         $ZigPath = "C:\zig\zig-windows-x86_64-$ZigVersion"
@@ -69,6 +62,7 @@ jobs:
         echo "C:\zig\zig-windows-x86_64-$ZigVersion" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
     - name: Install dependencies
+      id: install-deps
       run: |
         gem install rake
         if (-not (Get-Command ninja -ErrorAction SilentlyContinue)) {
@@ -89,6 +83,7 @@ jobs:
         }
 
     - name: Build Oniguruma (Zig)
+      id: build-oniguruma
       run: |
         $version = "6.9.9"
         $target = "x86_64-windows-gnu"
@@ -203,14 +198,14 @@ jobs:
         }
 
     - name: Save Zig cache
-      if: always() && steps.cache-zig.outputs.cache-hit != 'true'
+      if: always() && steps.cache-zig.outputs.cache-hit != 'true' && steps.setup-zig.outcome == 'success'
       uses: actions/cache/save@v4
       with:
         path: C:\zig
         key: ${{ steps.cache-zig.outputs.cache-primary-key }}
 
     - name: Save vcpkg cache
-      if: always() && steps.cache-vcpkg.outputs.cache-hit != 'true'
+      if: always() && steps.cache-vcpkg.outputs.cache-hit != 'true' && steps.install-deps.outcome == 'success'
       uses: actions/cache/save@v4
       with:
         path: |
@@ -219,17 +214,9 @@ jobs:
           C:\vcpkg\downloads
         key: ${{ steps.cache-vcpkg.outputs.cache-primary-key }}
 
-    - name: Save Ruby cache
-      if: always() && steps.cache-ruby.outputs.cache-hit != 'true'
-      uses: actions/cache/save@v4
-      with:
-        path: |
-          C:\hostedtoolcache\windows\Ruby\3.1.*\x64
-          C:\hostedtoolcache\windows\Ruby\3.1.*\x86
-        key: ${{ steps.cache-ruby.outputs.cache-primary-key }}
 
     - name: Save Oniguruma cache
-      if: always() && steps.cache-oniguruma.outputs.cache-hit != 'true'
+      if: always() && steps.cache-oniguruma.outputs.cache-hit != 'true' && steps.build-oniguruma.outcome == 'success'
       uses: actions/cache/save@v4
       with:
         path: C:\oniguruma\windows-x86_64
@@ -262,14 +249,6 @@ jobs:
         restore-keys: |
           windows-vcpkg-x86_64-
 
-    - name: Restore Ruby cache
-      id: cache-ruby
-      uses: actions/cache/restore@v4
-      with:
-        path: |
-          C:\hostedtoolcache\windows\Ruby\3.1.*\x64
-          C:\hostedtoolcache\windows\Ruby\3.1.*\x86
-        key: windows-ruby-3.1
 
     - name: Setup Ruby
       uses: ruby/setup-ruby@v1
@@ -437,14 +416,6 @@ jobs:
           C:\vcpkg\downloads
         key: ${{ steps.cache-vcpkg.outputs.cache-primary-key }}
 
-    - name: Save Ruby cache
-      if: always() && steps.cache-ruby.outputs.cache-hit != 'true'
-      uses: actions/cache/save@v4
-      with:
-        path: |
-          C:\hostedtoolcache\windows\Ruby\3.1.*\x64
-          C:\hostedtoolcache\windows\Ruby\3.1.*\x86
-        key: ${{ steps.cache-ruby.outputs.cache-primary-key }}
 
   test-no-package-manager:
     runs-on: windows-latest
@@ -454,14 +425,6 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Restore Ruby cache
-      id: cache-ruby
-      uses: actions/cache/restore@v4
-      with:
-        path: |
-          C:\hostedtoolcache\windows\Ruby\3.1.*\x64
-          C:\hostedtoolcache\windows\Ruby\3.1.*\x86
-        key: windows-ruby-3.1
     - name: Restore Oniguruma cache
       id: cache-oniguruma
       uses: actions/cache/restore@v4
@@ -476,12 +439,14 @@ jobs:
         bundler-cache: true
 
     - name: Setup Zig
+      id: setup-zig
       run: |
         $ZigVersion = "0.10.1"
         Invoke-WebRequest -Uri "https://ziglang.org/download/$ZigVersion/zig-windows-x86_64-$ZigVersion.zip" -OutFile zig.zip
         Expand-Archive -Path zig.zip -DestinationPath C:\zig
         echo "C:\zig\zig-windows-x86_64-$ZigVersion" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
     - name: Install dependencies
+      id: install-deps
       run: |
         gem install rake
         if (-not (Get-Command ninja -ErrorAction SilentlyContinue)) {
@@ -502,6 +467,7 @@ jobs:
         }
 
     - name: Build Oniguruma (Zig)
+      id: build-oniguruma
       run: |
         $version = "6.9.9"
         $target = "x86_64-windows-gnu"
@@ -611,17 +577,9 @@ jobs:
         # Restore choco.exe
         Rename-Item "C:\ProgramData\chocolatey\bin\choco.exe.bak" "C:\ProgramData\chocolatey\bin\choco.exe" -ErrorAction SilentlyContinue
 
-    - name: Save Ruby cache
-      if: always() && steps.cache-ruby.outputs.cache-hit != 'true'
-      uses: actions/cache/save@v4
-      with:
-        path: |
-          C:\hostedtoolcache\windows\Ruby\3.1.*\x64
-          C:\hostedtoolcache\windows\Ruby\3.1.*\x86
-        key: ${{ steps.cache-ruby.outputs.cache-primary-key }}
 
     - name: Save Oniguruma cache
-      if: always() && steps.cache-oniguruma.outputs.cache-hit != 'true'
+      if: always() && steps.cache-oniguruma.outputs.cache-hit != 'true' && steps.build-oniguruma.outcome == 'success'
       uses: actions/cache/save@v4
       with:
         path: C:\oniguruma\windows-x86_64
