--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -36,14 +36,6 @@ jobs:
         restore-keys: |
           windows-vcpkg-${{ matrix.target }}-
 
-    - name: Restore Ruby cache
-      id: cache-ruby
-      uses: actions/cache/restore@v4
-      with:
-        path: |
-          C:\hostedtoolcache\windows\Ruby\3.1.*\x64
-          C:\hostedtoolcache\windows\Ruby\3.1.*\x86
-        key: windows-ruby-3.1
     - name: Restore Oniguruma cache
       id: cache-oniguruma
       uses: actions/cache/restore@v4
@@ -52,6 +44,7 @@ jobs:
         key: windows-oniguruma-6.9.9-${{ matrix.target }}
 
     - name: Setup Zig
+      id: setup-zig
       run: |
         $ZigVersion = "0.10.1"
         $ZigPath = "C:\zig\zig-windows-x86_64-$ZigVersion"
@@ -68,6 +61,7 @@ jobs:
         bundler-cache: true
 
     - name: Install dependencies
+      id: install-deps
       run: |
         gem install rake
         if (-not (Get-Command ninja -ErrorAction SilentlyContinue)) {
@@ -95,6 +89,7 @@ jobs:
         }
 
     - name: Build Oniguruma (Zig)
+      id: build-oniguruma
       run: |
         $version = "6.9.9"
         $target = if ("${{ matrix.target }}" -eq "windows-x86_64") { "x86_64-windows-gnu" } else { "i386-windows-gnu" }
@@ -200,14 +195,14 @@ jobs:
         path: mitamae-build/mitamae-*-windows*.exe
 
     - name: Save Zig cache
-      if: always() && steps.cache-zig.outputs.cache-hit != 'true'
+      if: always() && steps.cache-zig.outputs.cache-hit != 'true' && steps.setup-zig.outcome == 'success'
       uses: actions/cache/save@v4
       with:
         path: C:\zig
         key: ${{ steps.cache-zig.outputs.cache-primary-key }}
 
     - name: Save vcpkg cache
-      if: always() && steps.cache-vcpkg.outputs.cache-hit != 'true'
+      if: always() && steps.cache-vcpkg.outputs.cache-hit != 'true' && steps.install-deps.outcome == 'success'
       uses: actions/cache/save@v4
       with:
         path: |
@@ -216,17 +211,8 @@ jobs:
           C:\vcpkg\downloads
         key: ${{ steps.cache-vcpkg.outputs.cache-primary-key }}
 
-    - name: Save Ruby cache
-      if: always() && steps.cache-ruby.outputs.cache-hit != 'true'
-      uses: actions/cache/save@v4
-      with:
-        path: |
-          C:\hostedtoolcache\windows\Ruby\3.1.*\x64
-          C:\hostedtoolcache\windows\Ruby\3.1.*\x86
-        key: ${{ steps.cache-ruby.outputs.cache-primary-key }}
-
     - name: Save Oniguruma cache
-      if: always() && steps.cache-oniguruma.outputs.cache-hit != 'true'
+      if: always() && steps.cache-oniguruma.outputs.cache-hit != 'true' && steps.build-oniguruma.outcome == 'success'
       uses: actions/cache/save@v4
       with:
         path: C:\oniguruma\${{ matrix.target }}
