Fix i386 libyaml triplet and improve test logging

--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -227,6 +227,12 @@ jobs:
         .\mitamae-build\mitamae-x86_64-windows.exe local -l debug windows_test.rb 2>&1 | Tee-Object -FilePath windows_test.log
         $exitCode = $LASTEXITCODE
         if ($exitCode -ne 0) {
+          Write-Host "mitamae exit code: $exitCode"
+          if (Test-Path windows_test.log) {
+            Write-Host "windows_test.log size: $((Get-Item windows_test.log).Length) bytes"
+          } else {
+            Write-Host "windows_test.log not found"
+          }
           Get-Content windows_test.log
           exit $exitCode
         }
