Add Windows runtime diagnostics

--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -225,6 +225,7 @@ jobs:
     - name: Inspect mitamae binary dependencies
       run: |
         $binary = ".\mitamae-build\mitamae-x86_64-windows.exe"
+        $env:Path = "C:\vcpkg\installed\x64-windows\bin;C:\oniguruma\windows-x86_64\bin;$env:Path"
         Write-Host "Binary: $binary"
         if (Test-Path $binary) {
           Get-Item $binary | Format-List *
@@ -233,10 +234,26 @@ jobs:
           exit 1
         }
         $dumpbin = Get-Command dumpbin.exe -ErrorAction SilentlyContinue
+        if (-not $dumpbin) {
+          $vswhere = "${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe"
+          if (Test-Path $vswhere) {
+            $vsPath = & $vswhere -latest -products * -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -property installationPath
+            if ($vsPath) {
+              $dumpbin = Get-ChildItem -Path (Join-Path $vsPath "VC\Tools\MSVC") -Recurse -Filter dumpbin.exe -ErrorAction SilentlyContinue | Select-Object -First 1
+            }
+          }
+        }
         if ($dumpbin) {
-          & $dumpbin.Source /DEPENDENTS $binary
+          $dumpbinPath = if ($dumpbin.Source) { $dumpbin.Source } else { $dumpbin.FullName }
+          & $dumpbinPath /DEPENDENTS $binary
         } else {
-          Write-Host "dumpbin.exe not found"
+          $objdump = Get-Command objdump.exe -ErrorAction SilentlyContinue
+          if ($objdump) {
+            & $objdump.Source -p $binary
+          } else {
+            Write-Host "dumpbin.exe not found"
+            Write-Host "objdump.exe not found"
+          }
         }
         foreach ($path in @("C:\vcpkg\installed\x64-windows\bin", "C:\vcpkg\installed\x86-windows\bin", "C:\oniguruma\windows-x86_64\bin")) {
           if (Test-Path $path) {
@@ -249,6 +266,7 @@ jobs:
 
     - name: Run comprehensive test recipe
       run: |
+        $env:Path = "C:\vcpkg\installed\x64-windows\bin;C:\oniguruma\windows-x86_64\bin;$env:Path"
         .\mitamae-build\mitamae-x86_64-windows.exe local -l debug windows_test.rb 2>&1 | Tee-Object -FilePath windows_test.log
         $exitCode = $LASTEXITCODE
         if ($exitCode -ne 0) {
