--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -168,7 +168,15 @@ jobs:
     - name: Test binary
       run: |
         $binary = if ("${{ matrix.target }}" -eq "windows-x86_64") { "mitamae-build\mitamae-x86_64-windows.exe" } else { "mitamae-build\mitamae-i386-windows.exe" }
-        & $binary version
+        $vcpkgTriplet = if ("${{ matrix.target }}" -eq "windows-x86_64") { "x64-windows" } else { "x86-windows" }
+        $env:Path = "C:\vcpkg\installed\$vcpkgTriplet\bin;C:\oniguruma\${{ matrix.target }}\bin;$env:Path"
+        $versionOutput = & $binary version 2>&1
+        $versionExit = $LASTEXITCODE
+        $versionOutput
+        if ($versionExit -ne 0) {
+          Write-Host "mitamae version failed with exit code: $versionExit"
+          exit $versionExit
+        }
 
         # Test basic functionality
         $recipe = @'
@@ -184,7 +192,17 @@ jobs:
           content 'Build test successful'
         end
         '@
-        $recipe | & $binary local -l error -
+        $recipe | & $binary local -l error - 2>&1 | Tee-Object -FilePath mitamae_build_test.log
+        $exitCode = $LASTEXITCODE
+        if ($exitCode -ne 0) {
+          Write-Host "mitamae test failed with exit code: $exitCode"
+          if (Test-Path mitamae_build_test.log) {
+            Get-Content mitamae_build_test.log
+          } else {
+            Write-Host "mitamae_build_test.log not found"
+          }
+          exit $exitCode
+        }
 
         # Clean up
         Remove-Item -Recurse -Force 'C:\mitamae_build_test' -ErrorAction SilentlyContinue
