--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -9,9 +9,15 @@ on:
 jobs:
   build:
     runs-on: windows-latest
+    continue-on-error: ${{ matrix.allow_failure }}
     strategy:
+      fail-fast: false
       matrix:
-        target: [windows-x86_64, windows-i386]
+        include:
+          - target: windows-x86_64
+            allow_failure: false
+          - target: windows-i386
+            allow_failure: true
 
     steps:
     - name: Checkout code
