--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -74,7 +74,7 @@ jobs:
         # Use vcpkg to install pkgconf (provides pkg-config.exe)
         if (Test-Path "C:\vcpkg\vcpkg.exe") {
           C:\vcpkg\vcpkg.exe install pkgconf:x64-windows
-          C:\vcpkg\vcpkg.exe install libyaml:x64-windows
+          C:\vcpkg\vcpkg.exe install libyaml:x64-windows-static
           $toolsPath = "C:\vcpkg\installed\x64-windows\tools\pkgconf"
           if (Test-Path $toolsPath) {
             echo "$toolsPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
@@ -141,7 +141,8 @@ jobs:
         MRUBY_YAML_USE_SYSTEM_LIBRARY: 1
         ONIGURUMA_PREFIX: "C:/oniguruma/windows-x86_64"
         VCPKG_ROOT: "C:/vcpkg"
-        PKG_CONFIG_PATH: "C:/oniguruma/windows-x86_64/lib/pkgconfig;C:/vcpkg/installed/x64-windows/lib/pkgconfig"
+        VCPKG_TRIPLET: x64-windows-static
+        PKG_CONFIG_PATH: "C:/oniguruma/windows-x86_64/lib/pkgconfig;C:/vcpkg/installed/x64-windows-static/lib/pkgconfig"
       run: |
         # Create junction on same drive to shorten paths for Windows command line limits
         $currentDir = (Get-Location).Path
