--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -79,11 +79,11 @@ jobs:
         if (Test-Path "C:\vcpkg\vcpkg.exe") {
           if ("${{ matrix.target }}" -eq "windows-x86_64") {
             C:\vcpkg\vcpkg.exe install pkgconf:x64-windows
-            C:\vcpkg\vcpkg.exe install libyaml:x64-windows
+            C:\vcpkg\vcpkg.exe install libyaml:x64-windows-static
             $toolsPath = "C:\vcpkg\installed\x64-windows\tools\pkgconf"
           } else {
             C:\vcpkg\vcpkg.exe install pkgconf:x86-windows
-            C:\vcpkg\vcpkg.exe install libyaml:x86-windows
+            C:\vcpkg\vcpkg.exe install libyaml:x86-windows-static
             $toolsPath = "C:\vcpkg\installed\x86-windows\tools\pkgconf"
           }
 
@@ -152,7 +152,8 @@ jobs:
         MRUBY_YAML_USE_SYSTEM_LIBRARY: 1
         ONIGURUMA_PREFIX: "C:/oniguruma/${{ matrix.target }}"
         VCPKG_ROOT: "C:/vcpkg"
-        PKG_CONFIG_PATH: "C:/oniguruma/${{ matrix.target }}/lib/pkgconfig;C:/vcpkg/installed/${{ matrix.target == 'windows-x86_64' && 'x64-windows' || 'x86-windows' }}/lib/pkgconfig"
+        VCPKG_TRIPLET: ${{ matrix.target == 'windows-x86_64' && 'x64-windows-static' || 'x86-windows-static' }}
+        PKG_CONFIG_PATH: "C:/oniguruma/${{ matrix.target }}/lib/pkgconfig;C:/vcpkg/installed/${{ matrix.target == 'windows-x86_64' && 'x64-windows-static' || 'x86-windows-static' }}/lib/pkgconfig"
       run: |
         # Create junction on same drive to shorten paths for Windows command line limits
         $currentDir = (Get-Location).Path
