--- a/.github/workflows/windows-package-test.yml
+++ b/.github/workflows/windows-package-test.yml
@@ -73,7 +73,7 @@ jobs:
         # Use vcpkg to install pkgconf (provides pkg-config.exe)
         if (Test-Path "C:\vcpkg\vcpkg.exe") {
           C:\vcpkg\vcpkg.exe install pkgconf:x64-windows
-          C:\vcpkg\vcpkg.exe install libyaml:x64-windows-static
+          C:\vcpkg\vcpkg.exe install libyaml:x64-mingw-dynamic
           $toolsPath = "C:\vcpkg\installed\x64-windows\tools\pkgconf"
           if (Test-Path $toolsPath) {
             echo "$toolsPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
@@ -140,8 +140,8 @@ jobs:
         MRUBY_YAML_USE_SYSTEM_LIBRARY: 1
         ONIGURUMA_PREFIX: "C:/oniguruma/windows-x86_64"
         VCPKG_ROOT: "C:/vcpkg"
-        VCPKG_TRIPLET: x64-windows-static
-        PKG_CONFIG_PATH: "C:/oniguruma/windows-x86_64/lib/pkgconfig;C:/vcpkg/installed/x64-windows-static/lib/pkgconfig"
+        VCPKG_TRIPLET: x64-mingw-dynamic
+        PKG_CONFIG_PATH: "C:/oniguruma/windows-x86_64/lib/pkgconfig;C:/vcpkg/installed/x64-mingw-dynamic/lib/pkgconfig"
       run: |
         rake "release:build:windows-x86_64"
 
@@ -278,7 +278,7 @@ jobs:
         # Use vcpkg to install pkgconf (provides pkg-config.exe)
         if (Test-Path "C:\vcpkg\vcpkg.exe") {
           C:\vcpkg\vcpkg.exe install pkgconf:x64-windows
-          C:\vcpkg\vcpkg.exe install libyaml:x64-windows-static
+          C:\vcpkg\vcpkg.exe install libyaml:x64-mingw-dynamic
           $toolsPath = "C:\vcpkg\installed\x64-windows\tools\pkgconf"
           if (Test-Path $toolsPath) {
             echo "$toolsPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
@@ -344,8 +344,8 @@ jobs:
         MRUBY_YAML_USE_SYSTEM_LIBRARY: 1
         ONIGURUMA_PREFIX: "C:/oniguruma/windows-x86_64"
         VCPKG_ROOT: "C:/vcpkg"
-        VCPKG_TRIPLET: x64-windows-static
-        PKG_CONFIG_PATH: "C:/oniguruma/windows-x86_64/lib/pkgconfig;C:/vcpkg/installed/x64-windows-static/lib/pkgconfig"
+        VCPKG_TRIPLET: x64-mingw-dynamic
+        PKG_CONFIG_PATH: "C:/oniguruma/windows-x86_64/lib/pkgconfig;C:/vcpkg/installed/x64-mingw-dynamic/lib/pkgconfig"
       run: |
         # Create junction on same drive to shorten paths for Windows command line limits
         $currentDir = (Get-Location).Path
@@ -459,7 +459,7 @@ jobs:
         # Use vcpkg to install pkgconf (provides pkg-config.exe)
         if (Test-Path "C:\vcpkg\vcpkg.exe") {
           C:\vcpkg\vcpkg.exe install pkgconf:x64-windows
-          C:\vcpkg\vcpkg.exe install libyaml:x64-windows-static
+          C:\vcpkg\vcpkg.exe install libyaml:x64-mingw-dynamic
           $toolsPath = "C:\vcpkg\installed\x64-windows\tools\pkgconf"
           if (Test-Path $toolsPath) {
             echo "$toolsPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
@@ -526,8 +526,8 @@ jobs:
         MRUBY_YAML_USE_SYSTEM_LIBRARY: 1
         ONIGURUMA_PREFIX: "C:/oniguruma/windows-x86_64"
         VCPKG_ROOT: "C:/vcpkg"
-        VCPKG_TRIPLET: x64-windows-static
-        PKG_CONFIG_PATH: "C:/oniguruma/windows-x86_64/lib/pkgconfig;C:/vcpkg/installed/x64-windows-static/lib/pkgconfig"
+        VCPKG_TRIPLET: x64-mingw-dynamic
+        PKG_CONFIG_PATH: "C:/oniguruma/windows-x86_64/lib/pkgconfig;C:/vcpkg/installed/x64-mingw-dynamic/lib/pkgconfig"
       run: |
         # Create junction on same drive to shorten paths for Windows command line limits
         $currentDir = (Get-Location).Path
