--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -232,6 +232,7 @@ jobs:
         Remove-Item -Recurse -Force 'C:\mitamae_build_test' -ErrorAction SilentlyContinue
 
     - name: Upload artifacts
+      if: always()
       uses: actions/upload-artifact@v4
       with:
         name: mitamae-${{ matrix.target }}
