--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -236,7 +236,9 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: mitamae-${{ matrix.target }}
-        path: mitamae-build/mitamae-*-windows*.exe
+        path: |
+          mitamae-build/mitamae-*-windows*.exe
+          mruby/build/windows-*/bin/*.pdb
 
     - name: Upload crash dumps
       if: always() && hashFiles('mitamae-dumps/**') != ''
