--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -150,6 +150,7 @@ jobs:
     - name: Build mitamae
       env:
         MRUBY_YAML_USE_SYSTEM_LIBRARY: 1
+        MITAMAE_DEBUG_SYMBOLS: 1
         ONIGURUMA_PREFIX: "C:/oniguruma/${{ matrix.target }}"
         VCPKG_ROOT: "C:/vcpkg"
         VCPKG_TRIPLET: ${{ matrix.target == 'windows-x86_64' && 'x64-mingw-dynamic' || 'x86-mingw-dynamic' }}
