--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -140,6 +140,7 @@ jobs:
       env:
         MRUBY_YAML_USE_SYSTEM_LIBRARY: 1
         MITAMAE_DEBUG_SYMBOLS: 1
+        MITAMAE_DISABLE_GEMS: "mruby-open3,mruby-shellwords,mruby-tempfile,mruby-erb,mruby-etc,mruby-process,mruby-specinfra"
         ONIGURUMA_PREFIX: "C:/oniguruma/windows-x86_64"
         VCPKG_ROOT: "C:/vcpkg"
         VCPKG_TRIPLET: x64-mingw-dynamic
