--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -150,6 +150,7 @@ jobs:
     - name: Build mitamae
       env:
         MRUBY_YAML_USE_SYSTEM_LIBRARY: 1
+        MITAMAE_GEM_DEBUG: 1
         MITAMAE_DEBUG_SYMBOLS: 1
         MITAMAE_DISABLE_GEMS: "mruby-open3,mruby-shellwords,mruby-tempfile,mruby-erb,mruby-etc,mruby-process,mruby-specinfra,mruby-yaml"
         ONIGURUMA_PREFIX: "C:/oniguruma/${{ matrix.target }}"
