--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -180,14 +180,6 @@ jobs:
         $binary = if ("${{ matrix.target }}" -eq "windows-x86_64") { "mitamae-build\mitamae-x86_64-windows.exe" } else { "mitamae-build\mitamae-i386-windows.exe" }
         $vcpkgTriplet = if ("${{ matrix.target }}" -eq "windows-x86_64") { "x64-mingw-dynamic" } else { "x86-mingw-dynamic" }
         $env:Path = "C:\vcpkg\installed\$vcpkgTriplet\bin;C:\oniguruma\${{ matrix.target }}\bin;$env:Path"
-        $versionOutput = & $binary version 2>&1
-        $versionExit = $LASTEXITCODE
-        $versionOutput
-        if ($versionExit -ne 0) {
-          Write-Host "mitamae version failed with exit code: $versionExit"
-          exit $versionExit
-        }
-
         $dumpDir = Join-Path (Get-Location) "mitamae-dumps"
         New-Item -ItemType Directory -Force -Path $dumpDir | Out-Null
         $procdump = Get-Command procdump.exe -ErrorAction SilentlyContinue
@@ -199,6 +191,19 @@ jobs:
           $procdumpPath = if ($procdump.Source) { $procdump.Source } else { $procdump.FullName }
         } else {
           $procdumpPath = $null
+        }
+
+        if ($procdumpPath) {
+          $versionOutput = & $procdumpPath -accepteula -e -ma -x $dumpDir $binary version 2>&1
+        } else {
+          $versionOutput = & $binary version 2>&1
+        }
+        $versionExit = $LASTEXITCODE
+        Write-Host "mitamae version output:"
+        $versionOutput
+        if ($versionExit -ne 0) {
+          Write-Host "mitamae version failed with exit code: $versionExit"
+          exit $versionExit
         }
 
         # Test basic functionality
